# math-research-radar

./: .dockerignore  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily.yml
cache/: seen_ids.json
data/cache/: seen_ids.json
data/papers/: 2026-07-19.json  2026-07-20.json  2026-07-21.json
data/stats/: categories.json  history.json
docs/: index.html
papers/: 2026-07-18.json  2026-07-20.json  2026-07-21.json
scripts/: fetch.py  generate_dashboard.py  update_readme.py  update_stats.py
src/radar/: config.py  logger.py  models.py
src/radar/analytics/: stats.py
src/radar/dashboard/: generator.py
src/radar/deduplication/: filter.py
src/radar/fetchers/: arxiv.py  base.py  crossref.py  openalex.py  semantic_scholar.py
src/radar/reporting/: readme.py
src/radar/storage/: json.py
stats/: categories.json  history.json
tests/: test_config.py
